Fixed innerWrapper alignment issue

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -91,6 +91,7 @@ body {
       height: 400px;
       display: inline-block;
       padding-top: 15px;
+      vertical-align: top;
     
       .imagePreview {
         width: 375px;
